--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sfk-hope-one",
-  "version": "0.0.33",
+  "version": "0.0.34",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -35,6 +35,7 @@
     "electron": "^6.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "raw-loader": "^4.0.1",
     "vue-cli-plugin-electron-builder": "~1.4.6",
     "vue-template-compiler": "^2.6.11"
   },
