--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "sfk-hope-one",
-  "version": "0.0.44",
+  "name": "br-bvm-assist",
+  "productName": "BR BVM Assist",
+  "version": "0.0.46",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
